--- a/requirements.txt
+++ b/requirements.txt
@@ -1,53 +1,50 @@
-# === Core Discord ===
+# Core Discord
 discord.py[voice]==2.5.2
 PyNaCl==1.5.0
 
-# === Reddit Integration ===
+# Reddit Integration
 asyncpraw==7.7.0
 asyncprawcore==2.3.0
 update-checker==0.18.0
 
-# === Environment & Web ===
+# Environment & Web
 python-dotenv==1.1.1
 Flask==3.0.3
 Werkzeug==3.0.3
-Jinja2==3.1.6
-itsdangerous==2.2.0
-MarkupSafe==3.0.2
+click==8.2.1
 blinker==1.9.0
-
-# === HTTP & Utilities ===
-aiohttp==3.9.5
+itsdangerous==2.2.0
 aiofiles==0.8.0
+
+# HTTP & Async Utilities
+aiohttp==3.9.5
 aiosignal==1.4.0
-frozenlist==1.7.0
-multidict==6.6.3
-yarl==1.20.1
-requests==2.32.4
-urllib3==2.5.0
-certifi==2025.7.14
-charset-normalizer==3.4.2
-attrs==25.3.0
-propcache==0.3.2
-
-# === Color Processing & Images ===
-colorthief==0.2.1
-Pillow==11.3.0
-
-# === Performance ===
-uvloop==0.21.0; python_version >= '3.13'
-audioop-lts==0.2.1
-
-# === Async Utilities ===
-aiosqlite==0.17.0
 async-timeout==4.0.3
 async-generator==1.10
 asyncio-extras==1.3.2
+yarl==1.20.1
+frozenlist==1.7.0
+typing_extensions==4.12.2
+idna==3.10
+urllib3==2.5.0
+charset-normalizer==3.4.2
+certifi==2025.7.14
+requests==2.32.4
+propcache==0.3.2
+
+# Performance
+uvloop==0.21.0; python_version >= '3.13'
+audioop_lts==0.2.1
 cffi==1.17.1
 pycparser==2.22
 
-# === Compatibility ===
-typing_extensions==4.12.2
+# Database / Storage
+aiosqlite==0.17.0
 
-# === Math / Utility ===
+# Color/Image Processing
+colorthief==0.2.1
+Pillow==11.3.0
+
+# Math Support
 sympy==1.13.1
+mpmath==1.3.0
